plugins {
    id 'fabric-loom' version "${loom_version}"
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    maven { 
        url = uri('https://maven.nucleoid.xyz')
        content {
            includeGroup("xyz.nucleoid")
            includeGroup("eu.pb4")
        }
    }
    maven { url = uri('https://maven.shedaniel.me/') }
    maven { url = uri('https://jitpack.io') }
    
    // 添加 Parchment 仓库
    maven { url = uri('https://maven.parchmentmc.org') }
}

loom {
    splitEnvironmentSourceSets()
    
    mods {
        "poly2ce" {
            sourceSet sourceSets.main
        }
    }
}

dependencies {
    // Minecraft 核心
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    
    // 使用 layered mappings（与 Polymer 一致）
    mappings loom.layered {
        officialMojangMappings()
        parchment("org.parchmentmc.data:parchment-1.21.1:2024.11.17@zip")
    }
    
    // Fabric Loader 和 API
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
    
    // Polymer 依赖
    modImplementation include("eu.pb4:polymer-common:${project.polymer_core_version}")
    modImplementation include("eu.pb4:polymer-core:${project.polymer_core_version}")
    modImplementation include("eu.pb4:polymer-virtual-entity:${project.polymer_core_version}")
}

processResources {
    inputs.property "version", project.version
    
    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
    it.options.encoding = 'UTF-8'
}

java {
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.archives_base_name}"}
    }
}

publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = project.archives_base_name
            from components.java
        }
    }
}
